# Common

./: BasicDataTypes.h  CMakeLists.txt  CompilerDetection.h  Endian.h  NameManglingGuard.h  Packed.h  README.md
Include/Common/: BasicDataTypes.h  CompilerDetection.h  Endian.h  Handle.h  Keywords.h  Packed.h  PlatformDetection.h
